@@ -1,1 +1,17 @@
-Prerelease hehe
+![Banner](image.png)
+#### A high performance packet-based damage indicator
+
+## Overview
+DamageIndicator is an extensive and feature-rich healthbar manager for Minecraft servers. It provides a system to **display damage dealt** to enemies solely using **packets**, which means no actual armor stand entities will be spawned. DamageIndicator is also **completely server-side** so **no additional mods are required** by your players. The **high-performance** packet spawning and **flexible configuration** makes DamageIndicator extremely suitable for large PvP or Survival servers.
+
+## Wiki
+[Features](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Features)<br>
+[Commands](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Commands)<br>
+[Permissions](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Permissions)<br>
+[Configuration](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Configuration)<br>
+[Frequently Asked Questions](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Frequently-Asked-Questions)<br>
+[Terms Of Service](https://gitlab.com/Zenya4/damage-indicator/-/wikis/Terms-Of-Service)
+
+## More info
+[Download] (todo)<br>
+[Support](https://discord.gg/KGuaxpM) (Discord)
