@@ -9,17 +9,15 @@ import org.bukkit.event.entity.EntityDamageEvent;
 import org.bukkit.event.entity.EntityRegainHealthEvent;
 
 public class Listeners implements Listener {
-    @EventHandler(priority = EventPriority.LOWEST)
+    @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
     public void onEntityDamageEvent(EntityDamageEvent e) {
-        if(e.isCancelled()) return;
         if(!(e.getEntity() instanceof Creature || e.getEntity() instanceof Player)) return;
         LivingEntity entity = (LivingEntity) e.getEntity();
         Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent(entity, -e.getFinalDamage()));
     }
 
-    @EventHandler(priority = EventPriority.LOWEST)
+    @EventHandler(priority = EventPriority.HIGHEST, ignoreCancelled = true)
     public void onEntityRegainHealthEvent(EntityRegainHealthEvent e) {
-        if(e.isCancelled()) return;
         if(!(e.getEntity() instanceof Creature || e.getEntity() instanceof Player)) return;
         LivingEntity entity = (LivingEntity) e.getEntity();
         Bukkit.getServer().getPluginManager().callEvent(new HologramSpawnEvent(entity, e.getAmount()));
