@@ -5,3 +5,9 @@ PRERELEASE 0.0.2:
 - Fixed an issue with 1.8 compatibility
 - Fixed a bug where indicators would show even if damage/heal event was cancelled by another plugin
 - Fixed a bug where indicators would show for entities like armor stands or boats
+
+PRERELEASE 0.0.3:
+- Fixed indicators showing in no pvp zones
+- Fixed indicators randomly showing in other worlds
+- Added options to bold, italicised and underline indicators
+- Updated default config
